--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "com.busradeniz.detection"
+        applicationId "com.prince.assestManagement"
         minSdkVersion 24
         targetSdkVersion 26
         versionCode 1
@@ -41,8 +41,12 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Tensorflow
-    compile 'org.tensorflow:tensorflow-android:+'
+    implementation 'org.tensorflow:tensorflow-android:+'
 
+    // Voice Recognition
+    implementation 'com.github.zagum:SpeechRecognitionView:1.2.2'
+    implementation 'ai.api:sdk:2.0.7@aar'
+    implementation 'ai.api:libai:1.6.12'
     // Test Dependencies
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
