--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".DetectorActivity" />
-        <activity android:name=".ScanActivity"></activity>
-        <!--<activity android:name=".DecoderActivity" />-->
+        <activity android:name=".ScanActivity" />
+        <!-- <activity android:name=".DecoderActivity" /> -->
     </application>
 
 </manifest>
