--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion '28.0.2'
     defaultConfig {
-        applicationId "com.prince.assestManagement"
+        applicationId "com.prince.assetManagement"
         minSdkVersion 24
         targetSdkVersion 26
         versionCode 1
@@ -42,7 +42,7 @@ dependencies {
 
     // Tensorflow
     implementation 'org.tensorflow:tensorflow-android:+'
-    implementation 'com.google.android.gms:play-services-vision:15.0.2'
+    implementation 'com.google.android.gms:play-services-vision:16.2.0'
     implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
     // Voice Recognition
     implementation 'com.github.zagum:SpeechRecognitionView:1.2.2'
@@ -50,9 +50,14 @@ dependencies {
     implementation 'ai.api:libai:1.6.12'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.github.zagum:SpeechRecognitionView:1.2.2'
+    implementation 'com.android.volley:volley:1.1.1'
     // Test Dependencies
     testImplementation 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-storage:16.0.3'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
 }
+apply plugin: 'com.google.gms.google-services'
