--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,12 +52,14 @@ dependencies {
     implementation 'com.github.zagum:SpeechRecognitionView:1.2.2'
     implementation 'com.android.volley:volley:1.1.1'
     // Test Dependencies
+    implementation 'com.android.support:support-annotations:26.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-storage:16.0.3'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
