--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,6 @@ dependencies {
     implementation 'ai.api:sdk:2.0.7@aar'
     implementation 'ai.api:libai:1.6.12'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.github.zagum:SpeechRecognitionView:1.2.2'
     implementation 'com.android.volley:volley:1.1.1'
     // Test Dependencies
     implementation 'com.android.support:support-annotations:26.1.0'
@@ -61,6 +60,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.google.firebase:firebase-firestore:17.1.1'
+    implementation 'com.github.kenglxn.QRGen:android:2.2.0'
+    implementation 'com.itextpdf:itextg:5.5.10'
+
+
+
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
