--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity android:name=".GeoLocation" />
         <activity android:name=".Details" />
         <activity android:name=".IssuingAssets" />
-        <activity android:name=".GenerateQR"></activity>
+        <activity android:name=".GenerateQR" />
+        <activity android:name=".GetPDF"></activity>
     </application>
 
 </manifest>
