--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,16 +33,11 @@
         <activity android:name=".DetectorActivity" />
         <activity android:name=".ScanActivity" />
         <activity android:name=".LoginActivity" />
-
-        <service
-            android:name=".FetchAddressIntentService"
-            android:exported="false" />
-        <!-- <activity android:name=".DecoderActivity" /> -->
-        <activity android:name=".GeoLocation" />
         <activity android:name=".Details" />
         <activity android:name=".IssuingAssets" />
         <activity android:name=".GenerateQR" />
-        <activity android:name=".GetPDF"></activity>
+        <activity android:name=".GetPDF" />
+        <activity android:name=".GetInformation"></activity>
     </application>
 
 </manifest>
