--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.prince.assetManagement"
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -62,6 +62,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.1'
     implementation 'com.github.kenglxn.QRGen:android:2.2.0'
     implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
 
 
 
