--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,14 +42,15 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".DetectorActivity" />
         <activity android:name=".ScanActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".WelcomeActivity" />
         <activity android:name=".Details" />
         <activity android:name=".IssuingAssets" />
         <activity android:name=".GenerateQR" />
         <activity android:name=".GetPDF" />
         <activity android:name=".GetInformation" />
         <activity android:name=".GetAssetInfo" />
-        <activity android:name=".Display_Info"></activity>
+        <activity android:name=".Display_Info" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
