--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,12 @@
         <activity android:name=".GetAssetInfo" />
         <activity android:name=".Display_Info" />
         <activity android:name=".Main2Activity" />
-        <activity android:name=".AddUsers"></activity>
+        <activity android:name=".AddUsers" />
+        <activity android:name=".ReportActivity">
+            <intent-filter>
+                <action android:name="ReportActivity"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
