--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,11 +62,13 @@ dependencies {
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.jjoe64:graphview:4.2.2'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation files('src/main/libs/activation.jar')
     implementation files('src/main/libs/additionnal.jar')
     implementation files('src/main/libs/mail.jar')
+
 }
 apply plugin: 'com.google.gms.google-services'
