--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:roundIcon="@mipmap/ic_launcher_custom"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".Display_Graph"></activity>
+        <activity android:name=".RequestAsset"></activity>
+        <activity android:name=".ReportedAssets" />
+        <activity android:name=".Display_Graph" />
         <activity android:name=".NormalUser" />
         <activity android:name=".Approver" />
 
