--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_custom"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ApproverAssetRequest"></activity>
+        <activity android:name=".AdminAssetRequest"></activity>
+        <activity android:name=".ApproverAssetRequest" />
         <activity android:name=".NormalUserRequests" />
         <activity android:name=".RequestAsset" />
         <activity android:name=".ReportedAssets" />
