--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
-    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
-    implementation 'com.google.firebase:firebase-firestore:17.1.5'
+    implementation 'com.google.firebase:firebase-firestore:18.0.1'
     implementation "com.firebaseui:firebase-ui-firestore:3.0.0"
     implementation 'com.github.kenglxn.QRGen:android:2.2.0'
     implementation 'com.itextpdf:itextg:5.5.10'
@@ -64,6 +64,10 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-dynamic-links:16.1.7'
+    implementation 'com.opencsv:opencsv:4.4'
+
+
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
