--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -36,8 +36,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Support libraries
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     // TensorFlow
     implementation 'org.tensorflow:tensorflow-android:+'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
@@ -48,7 +48,7 @@ dependencies {
     implementation 'ai.api:libai:1.6.12'
     implementation 'com.android.volley:volley:1.1.1'
     // Test Dependencies
-    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.annotation:annotation:1.0.0-beta01'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
@@ -60,16 +60,15 @@ dependencies {
     implementation "com.firebaseui:firebase-ui-firestore:3.0.0"
     implementation 'com.github.kenglxn.QRGen:android:2.2.0'
     implementation 'com.itextpdf:itextg:5.5.10'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'com.jjoe64:graphview:4.2.2'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     implementation 'com.google.firebase:firebase-dynamic-links:16.1.7'
     implementation 'com.opencsv:opencsv:4.4'
+    implementation 'com.google.android.material:material:1.0.0'
 
-
-
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation files('src/main/libs/activation.jar')
