--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Support libraries
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     // TensorFlow
     implementation 'org.tensorflow:tensorflow-android:+'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
@@ -48,7 +49,7 @@ dependencies {
     implementation 'ai.api:libai:1.6.12'
     implementation 'com.android.volley:volley:1.1.1'
     // Test Dependencies
-    implementation 'androidx.annotation:annotation:1.0.0-beta01'
+    implementation 'androidx.annotation:annotation:1.1.0-alpha01'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
@@ -60,10 +61,10 @@ dependencies {
     implementation "com.firebaseui:firebase-ui-firestore:3.0.0"
     implementation 'com.github.kenglxn.QRGen:android:2.2.0'
     implementation 'com.itextpdf:itextg:5.5.10'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.jjoe64:graphview:4.2.2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
     implementation 'com.google.firebase:firebase-dynamic-links:16.1.7'
     implementation 'com.opencsv:opencsv:4.4'
     implementation 'com.google.android.material:material:1.0.0'
