--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_custom"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeleteAssetInfo"></activity>
+        <activity android:name=".DeleteAssetInfo" />
         <activity android:name=".DeleteAssets" />
         <activity android:name=".AdminAssetRequest" />
         <activity android:name=".ApproverAssetRequest">
