--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+
 
 
 
