--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCoHgunlzF_NVlAe90w01tFpFS1XFTu9i0" />
+            android:value="API VALUE HERE" />
 
         <activity android:name=".StartActivity">
             <intent-filter>
